// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: Webhook List should render correctly with subaccounts 1`] = `
Array [
  "Name",
  "Target",
  "Events For",
]
`;

exports[`Page: Webhook List should render correctly with subaccounts 2`] = `
Array [
  Array [
    <Link
      replace={false}
      to="/webhooks/details/id?subaccount=0"
    >
      my webby hook
    </Link>,
    "go here",
    <SubaccountTag
      all={false}
      id={0}
      isDefault={false}
      master={true}
      receiveAll={false}
    />,
  ],
  Array [
    <Link
      replace={false}
      to="/webhooks/details/id-2?subaccount=101"
    >
      my webby hooki 2
    </Link>,
    "go there",
    <SubaccountTag
      all={false}
      id={101}
      isDefault={false}
      master={false}
      receiveAll={false}
    />,
  ],
  Array [
    <Link
      replace={false}
      to="/webhooks/details/id-3"
    >
      my webby hooki 3
    </Link>,
    "go nowhere",
    <SubaccountTag
      all={false}
      id={null}
      isDefault={false}
      master={false}
      receiveAll={true}
    />,
  ],
]
`;

exports[`Page: Webhook List should render error when it fails 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Push message events directly to your own endpoints
      </p>,
      "image": "Setup",
      "show": false,
      "title": "Create a Webhook",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Webhook",
      "to": "/webhooks/create",
    }
  }
  title="Webhooks"
>
  <ApiErrorBanner
    errorDetails="this hook failed"
    message="Sorry, we seem to have had some trouble loading your webhooks."
    reload={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
  />
</Page>
`;

exports[`Page: Webhook List should render happy path 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Push message events directly to your own endpoints
      </p>,
      "image": "Setup",
      "show": false,
      "title": "Create a Webhook",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Webhook",
      "to": "/webhooks/create",
    }
  }
  title="Webhooks"
>
  <TableCollection
    columns={
      Array [
        "Name",
        "Target",
      ]
    }
    defaultSortColumn="name"
    defaultSortDirection="asc"
    filterBox={
      Object {
        "itemToStringKeys": Array [
          "name",
          "target",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "id": "id",
          "name": "my webby hook",
          "subaccount_id": 0,
          "target": "go here",
        },
        Object {
          "id": "id-2",
          "name": "my webby hooki 2",
          "subaccount_id": 101,
          "target": "go there",
        },
        Object {
          "id": "id-3",
          "name": "my webby hooki 3",
          "target": "go nowhere",
        },
      ]
    }
  />
</Page>
`;

exports[`Page: Webhook List should render loading component when loading data 1`] = `<Loading />`;

exports[`Page: Webhook List should render row data properly 1`] = `
Array [
  <Link
    replace={false}
    to="/webhooks/details/id?subaccount=0"
  >
    my webby hook
  </Link>,
  "go here",
]
`;
